infrastructures/k8s/manifests/istio/nginx-to-istio-bridge.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-to-istio-bridge
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /document-service
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
          - path: /school-service
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
