infrastructures/k8s/manifests/istio/school-service-dr.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: school-service-dr
  namespace: staging
spec:
  host: school-service.staging.svc.cluster.local
  subsets:
    - name: v1
      labels:
        app: school-service
      trafficPolicy:
        connectionPool:
          http:
            http1MaxPendingRequests: 1
            maxRequestsPerConnection: 1
          tcp:
            maxConnections: 1
        outlierDetection:
          consecutive5xxErrors: 3
          interval: 5s
          baseEjectionTime: 30s
          maxEjectionPercent: 50
