infrastructures/k8s/manifests/istio/school-service-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: school-service-vs
  namespace: staging
spec:
  hosts:
    - school-service
  http:
    - fault:
        delay:
          percentage:
            value: 90.0
          fixedDelay: 5s
      route:
        - destination:
            host: school-service
            subset: v1
