infrastructures/k8s/manifests/istio/service-entry-postgres-db.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-postgres-db
  namespace: staging
spec:
  hosts:
    - postgres.external.db
  addresses:
    - 194.163.129.95/32
  ports:
    - number: 5432
      name: tcp-postgres
      protocol: TCP
  location: MESH_EXTERNAL
  resolution: NONE
